gitlab/gitlab-Deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  labels:
    k8s-app: gitlab
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      hostname: gitlab
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce
        # resources:
        #   limits:
        #     memory: "4096Mi"
        #     cpu: "0.999"
        ports:
        - containerPort: 443
          name: webssl
        - containerPort: 80
          name: web
        - containerPort: 22
          name: ssh
        readinessProbe:
          httpGet:
            path: /-/liveness?token=DHBvGXtrx7qgxQXd56x9
            port: 80
            # scheme: HTTPS
          initialDelaySeconds: 300
          periodSeconds: 3
        volumeMounts:
        - mountPath: /etc/gitlab
          name: gitlab-etc
        - mountPath: /var/opt/gitlab
          name: gitlab-data
        - mountPath: /var/log/gitlab
          name: gitlab-logs
        # envFrom:
        # - configMapRef:
        #    name: gitlab-cfg
      volumes:
      - name: gitlab-etc
        persistentVolumeClaim:
          claimName: gitlab-pvc-etc
      - name: gitlab-data
        persistentVolumeClaim:
          claimName: gitlab-pvc-data
      - name: gitlab-logs
        persistentVolumeClaim:
          claimName: gitlab-pvc-logs
