gitlab/gitlab-Services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  labels:
    k8s-app: gitlab
  namespace: gitlab
spec:
  selector:
    app: gitlab

  type: ClusterIP
  ports:
  - port: 80
    targetPort: web
    name: web
  - port: 443
    targetPort: webssl
    name: webssl
  - port: 22
    targetPort: ssh
    name: ssh
