gitlab/gitlab-Ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    k8s-app: gitlab
  name: gitlab
  namespace: gitlab
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  defaultBackend:
    service:
      name: gitlab
      port: 
        number: 80
  rules:
    - host: gitlab.k8s.rachuna.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gitlab
                port:
                  number: 80
